cmake_minimum_required(VERSION 3.0)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
project(QMultisweeper)
find_package(Qt5Widgets)
file(GLOB SOURCES . *.cpp *.h *.qrc *.ui)
add_executable(Multisweeper ${SOURCES})
target_link_libraries(LaunchPad Qt5::Widgets)
